// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse could override default openMotion 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-start"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-disabled="false"
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div
        class="ant-collapse-expand-icon"
      >
        <span
          aria-label="down"
          class="anticon anticon-left ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="left"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(270deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
            />
          </svg>
        </span>
      </div>
      <span
        class="ant-collapse-header-text"
      >
        This is panel header 1
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        content
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse should render extra node of panel 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-start"
>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div
        class="ant-collapse-expand-icon"
      >
        <span
          aria-label="right"
          class="anticon anticon-left ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="left"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(180deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
            />
          </svg>
        </span>
      </div>
      <span
        class="ant-collapse-header-text"
      >
        header
      </span>
      <div
        class="ant-collapse-extra"
      >
        <button
          type="button"
        >
          action
        </button>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div
        class="ant-collapse-expand-icon"
      >
        <span
          aria-label="right"
          class="anticon anticon-left ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="left"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(180deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
            />
          </svg>
        </span>
      </div>
      <span
        class="ant-collapse-header-text"
      >
        header
      </span>
      <div
        class="ant-collapse-extra"
      >
        <button
          type="button"
        >
          action
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse should support remove expandIcon 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-start"
>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <span
        class="ant-collapse-header-text"
      >
        header
      </span>
    </div>
  </div>
</div>
`;
